moved all the game starting logic into the game start function the current implementation has only two noticed bugs so far. 1. the 3rd ship placed in the ship placement board appears as if it occupies 4 spaces on the board even though it actually only takes up 3 as it is supposed to. 2. as of yet the ship placement validity check here allows ships to pile on top of each other. it doesn't allow ships to be placed in a way that makes some of their coordinates out of bounds.

--- a/src/style.css
+++ b/src/style.css
@@ -111,7 +111,8 @@ body {
   background-color: #7dd3fc;
 }
 
-.enemySlot:hover {
+.enemySlot:hover,
+.emptySelectionSlot:hover {
   background-color: #0ea5e9;
   margin: 10%;
 }
@@ -170,7 +171,7 @@ body {
   grid-template: 1fr 6fr 1fr/1fr 4fr 1fr;
 }
 
-.confirmSelection,
+.switchAxis,
 .randomize {
   font-size: 2rem;
   background-color: white;
@@ -180,7 +181,7 @@ body {
   cursor: pointer;
 }
 
-.confirmSelection:hover,
+.switchAxis:hover,
 .randomize:hover {
   color: white;
   background-color: black;
